--- a/tictactoe.html
+++ b/tictactoe.html
@@ -23,8 +23,17 @@
 </head>
 <body>
   <h1>Tic-Tac-Toe</h1>
-  <div class="board"></div>
-
+  <div class="board">
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+  </div>
   <script>
     const apiEndpoint = 'https://api.openai.com/v1/engines/davinci-codex/completions';
 
