--- a/randomsite.html
+++ b/randomsite.html
@@ -141,27 +141,27 @@ document.getElementById("random-btn").addEventListener("click", function() {
   ];
   
   // Get the last five websites from local storage or create an empty array if there are none
-  var lastFiftyWebsites = JSON.parse(localStorage.getItem("lastFiftyWebsites")) || [];
+  var lastNinetyWebsites = JSON.parse(localStorage.getItem("lastNinetyWebsites")) || [];
 
   // Generate a random number between 0 and the length of the websites array
   var randomIndex = Math.floor(Math.random() * websites.length);
 
   // Check if the randomly selected website is one of the last five websites
-  while (lastFiftyWebsites.includes(websites[randomIndex])) {
+  while (lastNinetyWebsites.includes(websites[randomIndex])) {
     // If it is, generate a new random number and check again
     randomIndex = Math.floor(Math.random() * websites.length);
   }
 
   // Add the randomly selected website to the beginning of the last five websites array
-  lastFiftyWebsites.unshift(websites[randomIndex]);
+  lastNinetyWebsites.unshift(websites[randomIndex]);
 
   // If the last five websites array has more than five items, remove the oldest one
-  if (lastFiftyWebsites.length > 50) {
-    lastFiftyWebsites.pop();
+  if (lastNinetyWebsites.length > 90) {
+    lastNinetyWebsites.pop();
   }
 
   // Save the updated last five websites array to local storage
-  localStorage.setItem("lastFiftyWebsites", JSON.stringify(lastFiftyWebsites));
+  localStorage.setItem("lastNinetyWebsites", JSON.stringify(lastNinetyWebsites));
 
   // Use the random number to get a random website from the array
   var randomWebsite = websites[randomIndex];
