--- a/longsite/cookies.html
+++ b/longsite/cookies.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div id="container">
-    <form action="site.html" method="POST">
+    <form action="site.html">
       <label class="checkbox">
         <input type="checkbox" name="cookies[]" required>
         Essential Cookies
