--- a/longsite/cookies.html
+++ b/longsite/cookies.html
@@ -5,16 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Acceptance</title>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
     #container {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
-    
+
+    form {
+      text-align: center;
+    }
+
     .checkbox {
       display: inline-block;
       margin-right: 10px;
+    }
+
+    input[type="submit"] {
+      margin-top: 10px;
+      padding: 8px 16px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      background-color: #007bff;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #0056b3;
+    }
+
+    input[type="submit"]:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
     }
   </style>
 </head>
