--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="fun, neal.fun, boredbutton, bored, have fun,">
     <meta name="author" content="NicoWebCreations">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="onion-location" content="http://<your-onion-service-address>.onion" />
+    <meta http-equiv="onion-location" content="http://http://zxnst77qqekovnjbroezkrv3zttlt2k5cqeugjib7smjkxbr2pysvpyd.onion/" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
