--- a/latinquiz.html
+++ b/latinquiz.html
@@ -497,7 +497,7 @@ const questions = [
 },
 {
   "question": "What is the Latin translation for 'I ran'?",
-  "answers": ["discedo", "fugio", "eo", "traho"],
+  "answers": ["discedo", "fugio", "curro", "traho"],
   "correctAnswerIndex": 2
 },
 {
